[package]
name = "bevy_astronomical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
paste = "1.0.11"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.3"
bevy_cube_sphere = { git = "https://github.com/bevy-interstellar/bevy_cube_sphere", tag = "v0.2.5" }
bevy_wgsl_noise = { git = "https://github.com/bevy-interstellar/bevy_wgsl_noise", tag = "v0.1.0" }

[dev-dependencies]
float-cmp = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
